--- a/src/card.scss
+++ b/src/card.scss
@@ -14,4 +14,18 @@
     border-top-left-radius: 8px;
     border-top-right-radius: 8px;
   }
+
+  &--brown {
+    border-color: brown;
+  }
+
+  &--brown & {
+    &__title {
+      background: brown;
+    }
+  }
+
+  & + & {
+    margin-top: 40px;
+  }
 }
